Closed
Bug 1305282
Opened 9 years ago
Closed 9 years ago
Pressing "space" key when focus is in a select menu open it instead of going to the first option which have a space
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
People
(Reporter: info, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files)
|
1.31 KB,
patch
|
enndeakin
:
review+
ritu
:
approval-mozilla-aurora+
ritu
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
|
2.88 KB,
patch
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:49.0) Gecko/20100101 Firefox/49.0
Build ID: 20160922113459
Steps to reproduce:
I have a website with select menus which have pretty long list of options (around 1k). Since the dawn of Firefox (well, at least for the 5-6 latest years), I was used to select the html select menu and type text to go to the first option that match my text (without opening the select menu to see the options, or at least some of them).
Actual results:
After installing the version 49.0.1 yesterday (saturday 24 september), this does not work anymore when text does contains spaces. When I press the "space" key (independently if the space is typed as first character or not), Firefox does open the option list instead of selecting the first option that have a space at this point of the typed text.
Expected results:
When pressing the space key in a select menu which is not opened, firefox should select the first option that match the space rather than opening the option list (as it was for the last 5-6 years).
Please note that a workaround exists : if I open first the option list, then type my text, this works as expected. But it is an additional step when moving with the "tab" key from select menu to select menu (example : tab -> space -> type text -> tab -> space -> type text -> ... instead of doing only tab -> type text -> tab -> type text).
If this can be reverted, would be great.
Note that I launched Edge to compare, it does behave like Firefox previous versions (< 49). I do not have Chrome installed at home, cannot say how it does behave.
Could you provide the URL of the website or a reduced testcase, please.
Flags: needinfo?(info)
Updated•9 years ago
|
QA Whiteboard: [bugday-20160926]
Keywords: needURLs,
testcase-wanted
https://www.final-fantasy.ch/temp/1305282.html
Load this page, the focus is automatically placed on the first select list (piece of JS). Type this exact text (whithout the quotes) : "le la".
Expected : focus is placed on the 9-th element of the list named "Le Labyrinthe des illusions".
Actual : after typing "le", focus is quickly placed on the 9-th element, then "space" key does open the select list, then "la" places the focus on "L'épreuve du sage", which is the first element starting by "l" as there is no element in the whole list starting by "la".
Comment 3•9 years ago
|
||
I can not reproduce this issue on User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:49.0) Gecko/20100101 Firefox/49.0
Following the steps above I get the expected results 10-10 times.
I can reproduce it.
Reg range:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=8d0aadfe7da782d415363880008b4ca027686137&tochange=56e5195bef5bf352d37181195dc6043ac3d198ad
Mats Palmgren — Bug 1272012 - Support more keys to open and/or toggle a combobox dropdown menu. r=enndeakin
Blocks: 1272012
Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
status-firefox49:
--- → affected
status-firefox50:
--- → affected
status-firefox51:
--- → affected
status-firefox52:
--- → affected
tracking-firefox49:
--- → ?
tracking-firefox50:
--- → ?
tracking-firefox51:
--- → ?
tracking-firefox52:
--- → ?
Component: Untriaged → Layout: Form Controls
Ever confirmed: true
Flags: needinfo?(info) → needinfo?(mats)
Product: Firefox → Core
| Assignee | ||
Comment 5•9 years ago
|
||
Oops, sorry, this is definitely an unintentional side effect of that change.
Assignee: nobody → mats
Flags: needinfo?(mats)
Comment 6•9 years ago
|
||
Too late to fix in 49 but we could still consider a patch for 50. There is a workaround, at least.
| Assignee | ||
Comment 7•9 years ago
|
||
Attachment #8796774 -
Flags: review?(enndeakin)
| Assignee | ||
Comment 8•9 years ago
|
||
| Assignee | ||
Comment 9•9 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=e904cd0081e8
https://treeherder.mozilla.org/#/jobs?repo=try&revision=c504ea22e0f6ebdbe8049084acdf1c2c6b6d2c48
OS: Windows 10 → All
Hardware: x86_64 → All
Updated•9 years ago
|
Attachment #8796774 -
Flags: review?(enndeakin) → review+
Comment 11•9 years ago
|
||
Pushed by mpalmgren@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5e9a39c2222d
Make the SPACE key work for incremental search of options again. r=enndeakin
https://hg.mozilla.org/integration/mozilla-inbound/rev/883ba9064d88
Test using the SPACE key in incremental search of options.
| Assignee | ||
Updated•9 years ago
|
Flags: in-testsuite+
| Assignee | ||
Comment 12•9 years ago
|
||
Comment on attachment 8796774 [details] [diff] [review]
fix
Approval Request Comment
[Feature/regressing bug #]:bug 1272012
[User impact if declined]: minor usability issue with <select> lists
[Describe test coverage new/current, TreeHerder]: comes with a mochitest
[Risks and why]: low-risk
[String/UUID change made/needed]: none
Attachment #8796774 -
Flags: approval-mozilla-beta?
Attachment #8796774 -
Flags: approval-mozilla-aurora?
Comment 13•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/5e9a39c2222d
https://hg.mozilla.org/mozilla-central/rev/883ba9064d88
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Comment on attachment 8796774 [details] [diff] [review]
fix
Fixes a recent regression, Aurora51+, Beta50+
Attachment #8796774 -
Flags: approval-mozilla-beta?
Attachment #8796774 -
Flags: approval-mozilla-beta+
Attachment #8796774 -
Flags: approval-mozilla-aurora?
Attachment #8796774 -
Flags: approval-mozilla-aurora+
Comment 15•9 years ago
|
||
| bugherder uplift | ||
Comment 16•9 years ago
|
||
| bugherder uplift | ||
| Reporter | ||
Comment 17•9 years ago
|
||
Confirmed fixed, received the 50.0 version today.
Status: RESOLVED → VERIFIED
Comment 18•9 years ago
|
||
To be honest, I haven't a clue what might have been fixed here.
If I understand reporter correctly he expcts
1. Open this web page in Browser → log in
2. click into "Whiteboard" input line
» caret appears
3. click <TAB> several times until "Version" Dropdown is selected
» Selection border appears around several fields until it reaches
"Version" Dropdown
4. Type "49"
» Dropdown contents switches to a result containing "49"
Sample from Comment 2 ist not very useful, this long list contains more or less any string you can type ...
But With FF 54.0a1 (2017-02-01) (32-bit) for me the result in Step 4 always immediately shows the field Starting with the last typed character:
Having typed "4" I see "40 Branch"
Having typed "9" I see "9 Branch"
Do I misunderstand something?
Is there a particular preference I need (find as you type, whatever, ... )?
Version: 49 Branch → 9 Branch
Comment 20•9 years ago
|
||
When a <select> is focused but not opened, typing characters including with spaces in them should autcomplete to options in the list, but not open the dropdown. The bug here was that space opened the dropdown always, but should only do so when there is no match or the typing timeout expires.
Bug 1338246 was filed against 49 so is certainly a duplicate, even though it is a Seamonkey bug.
You need to log in
before you can comment on or make changes to this bug.
Description
•