Bug 1305282 - Make the SPACE key work for incremental search of options again. r=enndeakin, a=ritu

--HG--
extra : rebase_source : 2fcbbeac6cf4b25eb34f093fb770c45dbbb3af0f
extra : source : 5e9a39c2222d2283a7b11b36eba6079d768dbec9